--- a/flatten_data.ipynb
+++ b/flatten_data.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. First thing to do on the ProPara data: 1) The ProPara spreadsheet has the sentences in a paragraph spread out over multiple columns.  Could you write some code to “flatten it out”? In other words, can you make it into a CSV that has one sentence per line?  And add a “sentence #” column so that we know which sentence it was in the original paragraph?"
+    "### Flatten the paragraph csv"
    ]
   },
   {
@@ -852,7 +852,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output.to_csv(\"flattened_paragraphs.csv\")"
+    "output.to_csv(\"data/flattened_paragraphs.csv\")"
    ]
   },
   {
