--- a/flatten_data.ipynb
+++ b/flatten_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,172 +17,12 @@
     "import io\n",
     "import requests\n",
     "\n",
-    "raw_data=pd.read_csv(\"data/paraph_raw.csv\")\n"
+    "raw_data=pd.read_csv(\"data/paragraph_raw.csv\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Topic</th>\n",
-       "      <th>Prompt</th>\n",
-       "      <th>Paragraph ID</th>\n",
-       "      <th>Sentence1</th>\n",
-       "      <th>Sentence2</th>\n",
-       "      <th>Sentence3</th>\n",
-       "      <th>Sentence4</th>\n",
-       "      <th>Sentence5</th>\n",
-       "      <th>Sentence6</th>\n",
-       "      <th>Sentence7</th>\n",
-       "      <th>Sentence8</th>\n",
-       "      <th>Sentence9</th>\n",
-       "      <th>Sentence10</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>oil</td>\n",
-       "      <td>How does oil form?</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Plants die.</td>\n",
-       "      <td>They are buried in sediment.</td>\n",
-       "      <td>Bacteria is buried in the sediment.</td>\n",
-       "      <td>Large amounts of sediment gradually pile on to...</td>\n",
-       "      <td>Pressure builds up.</td>\n",
-       "      <td>Heat increases.</td>\n",
-       "      <td>The chemical structure of the buried sediment ...</td>\n",
-       "      <td>The sediment and plants are at least one mile ...</td>\n",
-       "      <td>The buried area is extremely hot.</td>\n",
-       "      <td>More chemical changes happen and the buried ma...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>oil</td>\n",
-       "      <td>How does oil form?</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Algae and plankton die.</td>\n",
-       "      <td>The dead algae and plankton end up part of sed...</td>\n",
-       "      <td>The sediment breaks down.</td>\n",
-       "      <td>The bottom layers of sediment become compacted...</td>\n",
-       "      <td>Higher pressure causes the sediment to heat up.</td>\n",
-       "      <td>The heat causes chemical processes.</td>\n",
-       "      <td>The material becomes a liquid.</td>\n",
-       "      <td>Is known as oil.</td>\n",
-       "      <td>Oil moves up through rock.</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>volcano</td>\n",
-       "      <td>What causs a volcano to erupt?</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Magma rises from deep in the earth.</td>\n",
-       "      <td>The magma goes into volcanos.</td>\n",
-       "      <td>The volcanos pressure the magma upwards.</td>\n",
-       "      <td>The pressure causes the magma to push through ...</td>\n",
-       "      <td>The lava cools.</td>\n",
-       "      <td>The lava forms new rock.</td>\n",
-       "      <td>New magma is pressured to the surface of the v...</td>\n",
-       "      <td>The volcano bursts through the rock the formed...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     Topic                          Prompt  Paragraph ID  \\\n",
-       "0      oil              How does oil form?             4   \n",
-       "1      oil              How does oil form?             5   \n",
-       "2  volcano  What causs a volcano to erupt?             7   \n",
-       "\n",
-       "                             Sentence1  \\\n",
-       "0                          Plants die.   \n",
-       "1              Algae and plankton die.   \n",
-       "2  Magma rises from deep in the earth.   \n",
-       "\n",
-       "                                           Sentence2  \\\n",
-       "0                       They are buried in sediment.   \n",
-       "1  The dead algae and plankton end up part of sed...   \n",
-       "2                      The magma goes into volcanos.   \n",
-       "\n",
-       "                                  Sentence3  \\\n",
-       "0       Bacteria is buried in the sediment.   \n",
-       "1                 The sediment breaks down.   \n",
-       "2  The volcanos pressure the magma upwards.   \n",
-       "\n",
-       "                                           Sentence4  \\\n",
-       "0  Large amounts of sediment gradually pile on to...   \n",
-       "1  The bottom layers of sediment become compacted...   \n",
-       "2  The pressure causes the magma to push through ...   \n",
-       "\n",
-       "                                         Sentence5  \\\n",
-       "0                              Pressure builds up.   \n",
-       "1  Higher pressure causes the sediment to heat up.   \n",
-       "2                                  The lava cools.   \n",
-       "\n",
-       "                             Sentence6  \\\n",
-       "0                      Heat increases.   \n",
-       "1  The heat causes chemical processes.   \n",
-       "2             The lava forms new rock.   \n",
-       "\n",
-       "                                           Sentence7  \\\n",
-       "0  The chemical structure of the buried sediment ...   \n",
-       "1                     The material becomes a liquid.   \n",
-       "2  New magma is pressured to the surface of the v...   \n",
-       "\n",
-       "                                           Sentence8  \\\n",
-       "0  The sediment and plants are at least one mile ...   \n",
-       "1                                   Is known as oil.   \n",
-       "2  The volcano bursts through the rock the formed...   \n",
-       "\n",
-       "                           Sentence9  \\\n",
-       "0  The buried area is extremely hot.   \n",
-       "1         Oil moves up through rock.   \n",
-       "2                                NaN   \n",
-       "\n",
-       "                                          Sentence10  \n",
-       "0  More chemical changes happen and the buried ma...  \n",
-       "1                                                NaN  \n",
-       "2                                                NaN  "
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "raw_data[0:3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +163,7 @@
        "2                                                NaN  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
