--- a/cd analysis.ipynb
+++ b/cd analysis.ipynb
@@ -163,8 +163,8 @@
     "\n",
     "Primitive physical act 2: **float**\\\n",
     "actor: dust\\\n",
-    "object: None\\ \n",
-    "from: the air\\ \n",
+    "object: None\\\n",
+    "from: the air\\\n",
     "to: the air\n",
     "\n",
     "### The snow builds up for a very long time.\n",
@@ -178,7 +178,7 @@
     "### They take in fluids and liquids.\n",
     "Primitive physical act: **take in**\\\n",
     "actor: unknown\\\n",
-    "object: None\\\n",
+    "object: fluids, liquids\\\n",
     "from: outside\\\n",
     "to: inside\n"
    ]
@@ -198,29 +198,30 @@
     "\n",
     "Primitive 2: **EXPEL**\\\n",
     "actor: the animal\\\n",
-    "object: seed \\\n",
+    "object: seed\\\n",
     "from: the animal\\\n",
     "to: a new area\n",
     "\n",
     "### Some of the vapor condenses onto tiny pieces of dust that are floating in the air.\n",
     "Primitive 1: **PBUILD**\\\n",
     "actor: vapor\\\n",
-    "*PBUILD did not exist. Here I propose to add it regard to MBUILD. Def(PBUILD): transformation of physical form.*\n",
+    "***PBUILD did not exist. Here I propose to add it as the complement of MBUILD.***\\\n",
+    "***Def(PBUILD): transformation of physical form.***\n",
     "\n",
     "Primitive physical act 2: **PTRANS**\\\n",
     "actor: dust\\\n",
-    "object: None\\ \n",
-    "from: the air\\ \n",
+    "object: dust\\\n",
+    "from: the air\\\n",
     "to: the air\n",
     "\n",
     "### The snow builds up for a very long time.\n",
     "Primitive physical act: **PBUILD**\\\n",
-    "actor: snow\\\n",
+    "actor: snow\n",
     "\n",
     "### They take in fluids and liquids.\n",
     "Primitive physical act: **INGEST**\\\n",
     "actor: unknown\\\n",
-    "object: None\\\n",
+    "object: fluids, liquids\\\n",
     "from: outside\\\n",
     "to: inside\n",
     "\n"
