revised flattened data

--- a/flatten_data.ipynb
+++ b/flatten_data.ipynb
@@ -9,20 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import io\n",
     "import requests\n",
+    "import numpy as np\n",
     "\n",
-    "raw_data=pd.read_csv(\"data/paragraph_raw.csv\")\n"
+    "raw_data=pd.read_csv(\"data/paragraph_raw.csv\").replace(np.nan,\"\", regex=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +102,7 @@
        "      <td>The material becomes a liquid.</td>\n",
        "      <td>Is known as oil.</td>\n",
        "      <td>Oil moves up through rock.</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -116,8 +117,8 @@
        "      <td>The lava forms new rock.</td>\n",
        "      <td>New magma is pressured to the surface of the v...</td>\n",
        "      <td>The volcano bursts through the rock the formed...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -172,15 +173,15 @@
        "                           Sentence9  \\\n",
        "0  The buried area is extremely hot.   \n",
        "1         Oil moves up through rock.   \n",
-       "2                                NaN   \n",
+       "2                                      \n",
        "\n",
        "                                          Sentence10  \n",
        "0  More chemical changes happen and the buried ma...  \n",
-       "1                                                NaN  \n",
-       "2                                                NaN  "
+       "1                                                     \n",
+       "2                                                     "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +192,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_df_list = []\n",
+    "for row in raw_data.iterrows():\n",
+    "    # row = list(row)\n",
+    "\n",
+    "    line_id = row[0]\n",
+    "    topic = row[1][0]\n",
+    "    prompt = row[1][1]\n",
+    "    paragraphID = row[1][2]\n",
+    "    sentences = row[1][3:].to_list()\n",
+    "    for i in range(len(sentences)):\n",
+    "        new_row = [line_id, paragraphID, i+1, topic, prompt, sentences[i]]\n",
+    "        #print(new_row)\n",
+    "        new_df_list.append(new_row)    \n",
+    "    \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 4, 1, 'oil', 'How does oil form?', 'Plants die.'],\n",
+       " [0, 4, 2, 'oil', 'How does oil form?', 'They are buried in sediment.'],\n",
+       " [0, 4, 3, 'oil', 'How does oil form?', 'Bacteria is buried in the sediment.'],\n",
+       " [0,\n",
+       "  4,\n",
+       "  4,\n",
+       "  'oil',\n",
+       "  'How does oil form?',\n",
+       "  'Large amounts of sediment gradually pile on top of the original sediment.'],\n",
+       " [0, 4, 5, 'oil', 'How does oil form?', 'Pressure builds up.'],\n",
+       " [0, 4, 6, 'oil', 'How does oil form?', 'Heat increases.'],\n",
+       " [0,\n",
+       "  4,\n",
+       "  7,\n",
+       "  'oil',\n",
+       "  'How does oil form?',\n",
+       "  'The chemical structure of the buried sediment and plants changes.'],\n",
+       " [0,\n",
+       "  4,\n",
+       "  8,\n",
+       "  'oil',\n",
+       "  'How does oil form?',\n",
+       "  'The sediment and plants are at least one mile underground.'],\n",
+       " [0, 4, 9, 'oil', 'How does oil form?', 'The buried area is extremely hot.'],\n",
+       " [0,\n",
+       "  4,\n",
+       "  10,\n",
+       "  'oil',\n",
+       "  'How does oil form?',\n",
+       "  'More chemical changes happen and the buried material becomes oil.']]"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_df_list[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_df = pd.DataFrame(new_df_list).replace(\"\",np.nan)\n",
+    "new_df = new_df.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                                      2\n",
+       "1                                      7\n",
+       "2                                      1\n",
+       "3                                volcano\n",
+       "4         What causs a volcano to erupt?\n",
+       "5    Magma rises from deep in the earth.\n",
+       "Name: 20, dtype: object"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_df.iloc[19]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_df.columns = [\"line_id\", \"paragraphID\", \"sentence ID\", \"topic\", \"prompt\", \"sentence\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_df.to_csv(\"data/flattened_paragraphs.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Below is an old version w/ no sentence ID."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +335,7 @@
        "       'Bacteria is buried in the sediment.'], dtype=object)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1056,7 +1190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
