refctored sample 100, filtered out pure physical

--- a/sample_100.ipynb
+++ b/sample_100.ipynb
@@ -13,20 +13,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import io\n",
-    "import requests\n",
-    "\n",
-    "data=pd.read_csv(\"data/flattened_paragraphs.csv\", index_col=None)\n"
+    "import requests\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data=pd.read_csv(\"data/flattened_paragraphs.csv\", index_col=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>line_id</th>\n",
+       "      <th>paragraphID</th>\n",
+       "      <th>sentence ID</th>\n",
+       "      <th>topic</th>\n",
+       "      <th>prompt</th>\n",
+       "      <th>sentence</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1418</th>\n",
+       "      <td>201</td>\n",
+       "      <td>587</td>\n",
+       "      <td>10</td>\n",
+       "      <td>butterfly</td>\n",
+       "      <td>Describe the lifecycle of a butterfly</td>\n",
+       "      <td>The adult butterfly lays more eggs.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2188</th>\n",
+       "      <td>316</td>\n",
+       "      <td>872</td>\n",
+       "      <td>6</td>\n",
+       "      <td>gasoline</td>\n",
+       "      <td>How does oil get from the ground to a gas stat...</td>\n",
+       "      <td>Barrels are loaded on trucks.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>8</td>\n",
+       "      <td>22</td>\n",
+       "      <td>4</td>\n",
+       "      <td>valley</td>\n",
+       "      <td>How are valleys formed?</td>\n",
+       "      <td>The water forms a stream.</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      line_id  paragraphID  sentence ID      topic  \\\n",
+       "1418      201          587           10  butterfly   \n",
+       "2188      316          872            6   gasoline   \n",
+       "68          8           22            4     valley   \n",
+       "\n",
+       "                                                 prompt  \\\n",
+       "1418              Describe the lifecycle of a butterfly   \n",
+       "2188  How does oil get from the ground to a gas stat...   \n",
+       "68                              How are valleys formed?   \n",
+       "\n",
+       "                                 sentence  \n",
+       "1418  The adult butterfly lays more eggs.  \n",
+       "2188        Barrels are loaded on trucks.  \n",
+       "68              The water forms a stream.  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_100 = data.sample(100)\n",
+    "sample_100[:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_100.to_csv('sample_100_if_thoughts.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Restructure the sample100 data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data100 = pd.read_csv(\"data/sample_100_if_thoughts.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -53,55 +178,409 @@
        "      <th>Unnamed: 0</th>\n",
        "      <th>sentence</th>\n",
        "      <th>index</th>\n",
+       "      <th>is_thought_nin</th>\n",
+       "      <th>is_thought_leo</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>938</th>\n",
-       "      <td>1351</td>\n",
+       "      <th>0</th>\n",
+       "      <td>938</td>\n",
        "      <td>Living things die.</td>\n",
        "      <td>135</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2287</th>\n",
-       "      <td>3304</td>\n",
+       "      <th>1</th>\n",
+       "      <td>2287</td>\n",
        "      <td>The resulting information is interpreted by th...</td>\n",
        "      <td>330</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>564</th>\n",
-       "      <td>794</td>\n",
+       "      <th>2</th>\n",
+       "      <td>564</td>\n",
        "      <td>Balance your body as you roll on the skateboard.</td>\n",
        "      <td>79</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>640</td>\n",
+       "      <td>Acid rain enters the atmosphere and lands.</td>\n",
+       "      <td>91</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>492</td>\n",
+       "      <td>The materials are purchased by manufacturers.</td>\n",
+       "      <td>68</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2628</td>\n",
+       "      <td>Only wanted elements are passed to within the ...</td>\n",
+       "      <td>386</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>3244</td>\n",
+       "      <td>The grinder is activated.</td>\n",
+       "      <td>479</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1300</td>\n",
+       "      <td>They take in fluids and liquids.</td>\n",
+       "      <td>184</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2488</td>\n",
+       "      <td>Decomposition produces methane.</td>\n",
+       "      <td>364</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1099</td>\n",
+       "      <td>Different parts of the car cause the motion in...</td>\n",
+       "      <td>156</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Unnamed: 0                                           sentence  index\n",
-       "938         1351                                 Living things die.    135\n",
-       "2287        3304  The resulting information is interpreted by th...    330\n",
-       "564          794   Balance your body as you roll on the skateboard.     79"
+       "   Unnamed: 0                                           sentence  index  \\\n",
+       "0         938                                 Living things die.    135   \n",
+       "1        2287  The resulting information is interpreted by th...    330   \n",
+       "2         564   Balance your body as you roll on the skateboard.     79   \n",
+       "3         640         Acid rain enters the atmosphere and lands.     91   \n",
+       "4         492      The materials are purchased by manufacturers.     68   \n",
+       "5        2628  Only wanted elements are passed to within the ...    386   \n",
+       "6        3244                          The grinder is activated.    479   \n",
+       "7        1300                   They take in fluids and liquids.    184   \n",
+       "8        2488                    Decomposition produces methane.    364   \n",
+       "9        1099  Different parts of the car cause the motion in...    156   \n",
+       "\n",
+       "   is_thought_nin  is_thought_leo  \n",
+       "0             0.0               0  \n",
+       "1             1.0               1  \n",
+       "2             1.0               1  \n",
+       "3             0.0               0  \n",
+       "4             1.0               1  \n",
+       "5             1.0               0  \n",
+       "6             0.0               1  \n",
+       "7             0.0               0  \n",
+       "8             0.0               0  \n",
+       "9             0.0               0  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sample_100 = data.sample(100)\n",
-    "sample_100[:3]"
+    "data100[:10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sentence</th>\n",
+       "      <th>is_thought_nin</th>\n",
+       "      <th>is_thought_leo</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Living things die.</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>The resulting information is interpreted by th...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Balance your body as you roll on the skateboard.</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Acid rain enters the atmosphere and lands.</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>The materials are purchased by manufacturers.</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            sentence  is_thought_nin  \\\n",
+       "0                                 Living things die.             0.0   \n",
+       "1  The resulting information is interpreted by th...             1.0   \n",
+       "2   Balance your body as you roll on the skateboard.             1.0   \n",
+       "3         Acid rain enters the atmosphere and lands.             0.0   \n",
+       "4      The materials are purchased by manufacturers.             1.0   \n",
+       "\n",
+       "   is_thought_leo  \n",
+       "0               0  \n",
+       "1               1  \n",
+       "2               1  \n",
+       "3               0  \n",
+       "4               1  "
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data100 = data100.drop([\"Unnamed: 0\",\"index\"],axis=1)\n",
+    "data100[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_100.to_csv('sample_100_if_thoughts.csv')"
+    "import numpy as np\n",
+    "data100[\"is_thought_nin\"] = data100[\"is_thought_nin\"].replace(np.nan, \"0\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_merge = pd.merge(data, data100, on=['sentence']).dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>line_id</th>\n",
+       "      <th>paragraphID</th>\n",
+       "      <th>sentence ID</th>\n",
+       "      <th>topic</th>\n",
+       "      <th>prompt</th>\n",
+       "      <th>sentence</th>\n",
+       "      <th>is_thought_nin</th>\n",
+       "      <th>is_thought_leo</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>13</td>\n",
+       "      <td>37</td>\n",
+       "      <td>6</td>\n",
+       "      <td>fossil</td>\n",
+       "      <td>How are fossils formed?</td>\n",
+       "      <td>Fossils are formed.</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>18</td>\n",
+       "      <td>48</td>\n",
+       "      <td>8</td>\n",
+       "      <td>volcanic eruption</td>\n",
+       "      <td>What happens during a vocanic eruption?</td>\n",
+       "      <td>Mudslides and ash clouds cause problems after ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>24</td>\n",
+       "      <td>58</td>\n",
+       "      <td>9</td>\n",
+       "      <td>flood</td>\n",
+       "      <td>How do floods happen?</td>\n",
+       "      <td>The rest of the floodwater evaporates.</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>25</td>\n",
+       "      <td>61</td>\n",
+       "      <td>1</td>\n",
+       "      <td>sedimentary rock</td>\n",
+       "      <td>How does sediment turn into sedimentary rock?</td>\n",
+       "      <td>Minerals fill spaces between bits of sediment.</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>29</td>\n",
+       "      <td>69</td>\n",
+       "      <td>6</td>\n",
+       "      <td>coal</td>\n",
+       "      <td>How does coal form?</td>\n",
+       "      <td>Pressure caused by sedimentary rocks squeezes ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   line_id  paragraphID  sentence ID              topic  \\\n",
+       "0       13           37            6             fossil   \n",
+       "1       18           48            8  volcanic eruption   \n",
+       "2       24           58            9              flood   \n",
+       "3       25           61            1   sedimentary rock   \n",
+       "4       29           69            6               coal   \n",
+       "\n",
+       "                                          prompt  \\\n",
+       "0                        How are fossils formed?   \n",
+       "1        What happens during a vocanic eruption?   \n",
+       "2                          How do floods happen?   \n",
+       "3  How does sediment turn into sedimentary rock?   \n",
+       "4                            How does coal form?   \n",
+       "\n",
+       "                                            sentence is_thought_nin  \\\n",
+       "0                                Fossils are formed.              0   \n",
+       "1  Mudslides and ash clouds cause problems after ...              0   \n",
+       "2             The rest of the floodwater evaporates.              0   \n",
+       "3     Minerals fill spaces between bits of sediment.              0   \n",
+       "4  Pressure caused by sedimentary rocks squeezes ...              0   \n",
+       "\n",
+       "   is_thought_leo  \n",
+       "0               0  \n",
+       "1               0  \n",
+       "2               0  \n",
+       "3               0  \n",
+       "4               0  "
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_merge[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_merge.to_csv(\"data/sample_100_if_thoughts.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Filter out pure physical sentences from the size-100 sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_merge = df_merge[df_merge.is_thought_leo == 0]\n",
+    "df_merge = df_merge[df_merge.is_thought_nin == 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_merge.to_csv(\"data/sample100_pure_physical.csv\", index=False)"
    ]
   },
   {
@@ -128,7 +607,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
